0415-1959 - Création d'un message plus personnalisé et avancement sur l'outil WDT
Took 4 hours 17 minutes

--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -881,12 +881,24 @@ li:hover {
 	background-color: #E8F1F6;
 }
 
+.upload-modal__upload-elements {
+	height: 193px;
+}
+
 .upload-modal__upload-elements * {
 	background-color: #E8F1F6;
 }
 
 .upload-modal__upload-area {
 	margin: 4em 0;
+}
+
+.fileAdded {
+	margin: 4.5em;
+}
+
+#uploadFileInput {
+	display: none;
 }
 
 .upload-modal__btn-container {
