--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -18,7 +18,7 @@
 */
 
 /* ################################################################################################################### */
-/* ######################################### Définition du design system ############################################# */
+/* ######################################### Définition du deùsign system ############################################# */
 /* ################################################################################################################### */
 
 :root {
